ci-test 添加 pr 触发方便测试

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -3,7 +3,9 @@
 
 name: Docusaurus Build Test
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  pull_request:
   # push:
   #   branches: [ "master" ]
   # pull_request:
