修改 ci-test call submodule-update 条件

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -39,6 +39,6 @@ jobs:
     - run: yarn install --frozen-lockfile
     - run: yarn run --if-present build
   call-update-submodule:
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && always() && needs.build.result == 'success' }}
     uses: ./.github/workflows/submodule-update.yml
     needs: [build]
